[gd_scene load_steps=3 format=3 uid="uid://rpj21y6sv7vx"]

[ext_resource type="FontFile" uid="uid://5106t150xf6g" path="res://assets/font/Apple ][.ttf" id="1_a3gib"]
[ext_resource type="Script" uid="uid://bnegqk4i67rt6" path="res://scenes/UI/HUD/score.gd" id="1_eymnr"]

[node name="ScoreUI" type="CanvasLayer"]
script = ExtResource("1_eymnr")

[node name="Distance" type="Label" parent="."]
texture_filter = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 223.0
offset_bottom = 40.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("1_a3gib")
theme_override_font_sizes/font_size = 23
text = "DISTANCE:"
vertical_alignment = 1

[node name="DistanceValueLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 504.0
offset_top = 16.0
offset_right = 642.0
offset_bottom = 40.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("1_a3gib")
theme_override_font_sizes/font_size = 23
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimeLEft" type="Label" parent="."]
texture_filter = 1
offset_left = 16.0
offset_top = 72.0
offset_right = 154.0
offset_bottom = 96.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("1_a3gib")
theme_override_font_sizes/font_size = 23
text = "TIME LEFT:"
vertical_alignment = 1

[node name="TimeLeftValueLabel" type="Label" parent="."]
texture_filter = 1
offset_left = 504.0
offset_top = 72.0
offset_right = 642.0
offset_bottom = 96.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("1_a3gib")
theme_override_font_sizes/font_size = 23
text = "0
"
horizontal_alignment = 2
vertical_alignment = 1
